--- a/Nrobo/InstantController/InstantController.csproj
+++ b/Nrobo/InstantController/InstantController.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClientAbstract\ClientAbstract.csproj" />
+    <ProjectReference Include="..\Nlib\Nlib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
